--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^4.3.1",
     "react-loader-spinner": "^5.0.10",
     "react-scripts": "5.0.0",
+    "react-scroll": "^1.8.4",
     "web-vitals": "^2.1.3"
   },
   "homepage": "https://alivik.github.io/goit-react-hw-03-image-finder/",
